<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layered_waves_haikei"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/belajar_bg"
            android:layout_width="wrap_content"
            android:layout_height="309dp"
            android:src="@drawable/delapan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/belajar_pic1"
            android:layout_width="106dp"
            android:layout_height="106dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/enam"
            app:layout_constraintBottom_toBottomOf="@+id/belajar_name"
            app:layout_constraintStart_toStartOf="@+id/belajar_bg" />

        <TextView
            android:id="@+id/belajar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/belajar_pic1"
            app:layout_constraintTop_toBottomOf="@+id/belajar_bg"
            tools:text="@string/dummytitle" />

        <ImageView
            android:id="@+id/fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/baseline_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="@+id/belajar_name"
            app:layout_constraintStart_toEndOf="@+id/belajar_name"
            app:layout_constraintTop_toTopOf="@+id/belajar_name" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="Share"
            android:textColor="@color/white"
            app:cornerRadius = "20dp"
            android:backgroundTint="@color/color_base"
            android:background="@drawable/custom_edittext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/belajar_bg"
            app:layout_constraintStart_toStartOf="@+id/belajar_bg"
            app:layout_constraintTop_toBottomOf="@+id/belajar_explain" />

        <ImageView
            android:id="@+id/tv_to_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/share_button"
            app:layout_constraintStart_toStartOf="@+id/share_button"
            app:layout_constraintTop_toBottomOf="@+id/share_button" />

        <ImageView
            android:id="@+id/belajar_pic2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/baseline_podcasts_24"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/belajar_name"
            app:layout_constraintTop_toTopOf="@+id/belajar_uf" />

        <TextView
            android:id="@+id/belajar_uf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/dummybelajar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/belajar_name" />

        <TextView
            android:id="@+id/belajar_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dummydevice"
            app:layout_constraintStart_toStartOf="@+id/belajar_uf"
            app:layout_constraintTop_toBottomOf="@+id/belajar_uf" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@+id/belajar_device"
            app:layout_constraintTop_toBottomOf="@+id/belajar_device" />

        <TextView
            android:id="@+id/belajar_tahun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummybirth"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/laptop"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/belajar_laptop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummylaptop"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/intro"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/belajar_explain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dummyintro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>